--- a/src/components/category-item/categories.styles.scss
+++ b/src/components/category-item/categories.styles.scss
@@ -59,11 +59,13 @@
       margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
+      text-transform: capitalize;
     }
 
     p {
       font-weight: lighter;
       font-size: 16px;
+      text-transform: capitalize;
     }
   }
 }
