--- a/src/index.scss
+++ b/src/index.scss
@@ -4,10 +4,11 @@
 
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  padding: 20px 40px;
 }
 
 code {
